# slin

./: .gitignore  .hgignore  CMakeLists.txt  LICENSE  index.html  params.json
src/: CMakeLists.txt  coloroutput.hpp  coloroutput_curses.cpp  coloroutput_generic.cpp  coloroutput_win32.cpp  config.hpp.cmake  configfile.cpp  configfile.hpp  database.cpp  database.hpp  link.cpp  link.hpp  main.cpp  utils.cpp  utils.hpp
src/cli/: CMakeLists.txt  coloroutput_generic.cpp  main.cpp
src/core/: CMakeLists.txt  link.cpp  link.hpp  regex.cpp  regex.hpp  utils.cpp
